# astra

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindProtobuf.cmake
docs/: simpledepthreader.rst
include/astra/capi/streams/: image_capi.h
include/astra_core/: StreamReader.hpp  astra_cxx_make_unique.hpp
include/common/clock/: Stopwatch.h
install/: orbbec-usb.rules
lpp/cl-fad/: fad.lisp
patches/: OpenNI2.patch  astra.patch  shinyprofiler.patch
samples/: CMakeLists.txt
samples/common/: key_handler.h
samples/sfml/: CMakeLists.txt
samples/sfml/MultiSensorViewer-SFML/: main.cpp
samples/sfml/SimpleDepthViewer-SFML/: main.cpp
samples/sfml/SimpleStreamViewer-SFML/: main.cpp
src/: CMakeLists.txt
src/astra_core/: CMakeLists.txt  astra_configuration.cpp  astra_configuration.hpp  astra_context_impl.cpp  astra_cxx_make_unique.hpp  astra_filesystem.hpp  astra_logger.cpp  astra_logging.cpp  astra_logging.hpp  astra_platform.hpp  astra_plugin_manager.cpp  astra_plugin_service.hpp  astra_shared_library.hpp  astra_stream.cpp  astra_stream_backend.cpp  astra_stream_bin.cpp  astra_stream_connection.cpp  astra_streamset.cpp  astra_streamset_catalog.cpp
src/astra_core/tests/: CMakeLists.txt  catch.hpp
src/common/clock/: Stopwatch.cpp
src/plugins/: CMakeLists.txt
src/plugins/openni_sensor/: CMakeLists.txt  oni_depthstream.cpp
tests/: CMakeLists.txt
